--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#57ebbe"
-backgroundColor="#002e47"
+backgroundColor="#003048"
 font="Sans serif"
 textColor="#ffffff"
 secondaryBackgroundColor="#0f374d"
